--- a/maitrelaribi/src/services/ConsultationComponent.css
+++ b/maitrelaribi/src/services/ConsultationComponent.css
@@ -8,7 +8,7 @@
   }
   
   .consultation-container h2 {
-    color: #4caf50; /* Green color */
+    color: #001f3f; /* Green color */
   }
   
   .consultation-container p {
