--- a/maitrelaribi/src/services/HonorairesPolitiqueComponent.css
+++ b/maitrelaribi/src/services/HonorairesPolitiqueComponent.css
@@ -8,7 +8,7 @@
 }
 
 .honoraires-politique-container h2 {
-  color: #ff5722; /* Deep orange color */
+  color: #001f3f; /* Deep orange color */
 }
 
 .honoraires-politique-container p {
