--- a/maitrelaribi/src/components/FormationComponent.css
+++ b/maitrelaribi/src/components/FormationComponent.css
@@ -8,7 +8,7 @@
   }
   
   .formation-container h2 {
-    color: #4caf50; /* Green color */
+    color: #001f3f; /* Green color */
   }
   
   .formation-container p {
