--- a/maitrelaribi/src/components/Footer.css
+++ b/maitrelaribi/src/components/Footer.css
@@ -1,7 +1,7 @@
 /* Footer.css */
 
 .main-footer {
-    background-color: rgb(0, 31, 63); /* Set your desired background color */
+    background-color: #7ba5a1; /* Set your desired background color */
     color: #fff; /* Set your desired text color */
     padding: 30px 0;
   }
