--- a/maitrelaribi/src/services/HonorairesPolitiqueComponent.css
+++ b/maitrelaribi/src/services/HonorairesPolitiqueComponent.css
@@ -28,7 +28,7 @@
   width: 200px;
   margin: 0 auto;
   padding: 10px 20px;
-  background: #e6cba1;
+  background: #e6cba1 !important;
   color: #fff;
   font-size: .8em;
   box-sizing: border-box;
