--- a/maitrelaribi/src/App.css
+++ b/maitrelaribi/src/App.css
@@ -2,6 +2,6 @@ body{
     margin: 0px !important;
     background-color: #e0f2f1 !important;
 }
-.row {
+/* .row {
     --bs-gutter-x: none !important;
-  }
+  } */
